test/cgip/PP/error/inheritance/rep/reperr-21.err105
"Line 47 column 13
258: Construct is multiple defined within the current scope"
